[package]
name = "oida"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]

[dependencies]
grok = "0.5"
chrono = { version = "0.4", features = ["serde"]}
regex = "1.0"
lazy_static = "1.0"
pbr = "1.0"
clap = { version = "2.31", features = ["yaml"]}
serde = "1.0"
serde_cbor = "0.8"
serde_derive = "1.0"
colored = "1.6"
toml = "0.4"
prettytable-rs = "0.7"

[[bin]]
name = "oida"
path = "src/main.rs"

[profile.release]
lto = true
